önizleme görüntüleri güncellendi

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,7 +22,7 @@
     <meta property="og:description"
           content="{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
     <meta property="og:image"
-          content="https://github.com/drpolaton/drpolaton.github.io/raw/master/img/the_best_and_last_white_plan.png">
+          content="https://raw.githubusercontent.com/drpolaton/drpolaton.github.io/master/screenshot.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -31,7 +31,7 @@
     <meta property="twitter:description"
           content="{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
     <meta property="twitter:image"
-          content="https://github.com/drpolaton/drpolaton.github.io/raw/master/img/the_best_and_last_white_plan.png">
+          content="https://raw.githubusercontent.com/drpolaton/drpolaton.github.io/master/screenshot.png">
 
 
 </head>
