--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,34 +1,32 @@
 <div id="particles-js">
-  <div class="header">
-      <h1>
-        <span class="site-title">{{ site.username }}</span>
-        <span class="site-description">{{ site.user_title }}</span>
-      </h1>
-      <div class="header-icons">
-        <a aria-label="Send email" href="mailto:{{ site.email }}">
-            <i class="icon fa fa-envelope"></i>
-        </a>
-          <a aria-label="Youtube" target="_blank" href="https://www.youtube.com/c/{{ site.youtube_username }}">
-              <i class="icon fa fa-youtube" aria-hidden="true"></i>
-          </a>
-          <a aria-label="Instagram" target="_blank" href="https://www.instagram.com/{{ site.instagram_username }}">
-              <i class="icon fa fa-instagram" aria-hidden="true"></i>
-          </a>
-        <a aria-label="Twitter" target="_blank" href="https://www.twitter.com/{{ site.twitter_username }}">
-            <i class="icon fa fa-twitter" aria-hidden="true"></i>
-        </a>
-        <a aria-label="Github" target="_blank" href="https://github.com/{{ site.github_username }}">
-            <i class="icon fa fa-github-alt" aria-hidden="true"></i>
-        </a>
-        <a aria-label="Discord" target="_blank" href="https://drpolaton.com/b/Discord">
-            <i class="icon fa fa-discord" aria-hidden="true"></i>
-        </a>
-      </div>
-      <div class="header-links">
-        <!-- <a class="link" href="#" data-scroll>Header Links</a> -->
-          <footer class="footer">
-              <p>&copy; Build with Love <span class="love">❤</span> by <a href="https://github.com/muaz742">Eşek Arısı</a></p>
-          </footer>
-      </div>
-  </div>
+    <div class="header">
+        <h1>
+            <span class="site-title">{{ site.username }}</span>
+            <span class="site-description">{{ site.user_title }}</span>
+        </h1>
+        <div class="header-icons">
+            <a aria-label="Send email" href="mailto:{{ site.email }}">
+                <i class="icon fa fa-envelope"></i>
+            </a>
+            <a aria-label="Youtube" target="_blank" href="https://www.youtube.com/c/{{ site.youtube_username }}">
+                <i class="icon fa fa-youtube" aria-hidden="true"></i>
+            </a>
+            <a aria-label="Instagram" target="_blank" href="https://www.instagram.com/{{ site.instagram_username }}">
+                <i class="icon fa fa-instagram" aria-hidden="true"></i>
+            </a>
+            <a aria-label="Twitter" target="_blank" href="https://www.twitter.com/{{ site.twitter_username }}">
+                <i class="icon fa fa-twitter" aria-hidden="true"></i>
+            </a>
+            <a aria-label="Github" target="_blank" href="https://github.com/{{ site.github_username }}">
+                <i class="icon fa fa-github-alt" aria-hidden="true"></i>
+            </a>
+            <a aria-label="Discord" target="_blank" href="https://drpolaton.com/b/Discord">
+                <i class="icon fa fa-discord" aria-hidden="true"></i>
+            </a>
+        </div>
+        <div class="header-links">
+            <!-- <a class="link" href="#" data-scroll>Header Links</a> -->
+        </div>
+    </div>
+    <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
 </div>
