ilk paragraf güncellendi, petek bağlantısı eklendi

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,31 +5,51 @@
 <div class="user">
     <div class="tech">
         <img src="assets/img/the_best_and_last.kare.png" alt="" height="250px" width="250px">
-        <h2>{{ site.user_description }}</h2>
+        <h2>{{ site.user_title }}</h2>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non risus eget odio fermentum pulvinar in non
-            sem. Nunc eu odio vitae elit blandit maximus. Nunc a tempor lacus. Sed diam sapien, varius sed commodo in,
-            rhoncus ac risus. Nulla vitae felis at quam ultrices consectetur in vitae dui. In mattis elit sit amet
-            tempor euismod. Phasellus ut ex quis arcu faucibus aliquet. Integer et volutpat ante. Etiam eu lorem sem.
-            Integer sit amet orci pharetra, volutpat mi sit amet, sodales urna. Praesent ligula ligula, egestas eget
-            ultrices eu, viverra non odio.
+            İTÜ Elektronik ve Haberleşme Mühendisliğinden mezun oldu. Yüksek Lisans ve Doktora eğitimlerini yine İTÜ’de
+            tamamladı. Doktora eğitimi sırasında <b>Harvard-MIT Health Science and Technology</b> ve <b>Harvard Medical
+            School</b>’dameme kanserinde 3-boyutlu görüntüleme ve biyogörüntüleme konularında bilimsel çalışmalar yaptı.
+            <b>Harvard Medical School</b>’da <b>Mini-Opto Tomografi Cihazı</b> geliştirdi.
         </p>
         <p>
-            Etiam dapibus, lacus non cursus consectetur, nisl ligula lacinia erat, a sollicitudin nunc ante ac risus.
-            Nam a ipsum leo. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-            Etiam iaculis eu leo ac tempor. In fermentum sed nulla eget scelerisque. Nulla sodales vitae quam a rhoncus.
-            Phasellus ornare, dui vel tempor maximus, justo arcu sagittis arcu, cursus pharetra augue ante vel neque.
-            Curabitur auctor ipsum turpis, at tincidunt ante varius eu. Mauris cursus nisl quis turpis vestibulum
-            tincidunt. Nullam libero tellus, pretium eu sodales a, placerat sed nibh. Donec ut ex sit amet dui tempus
-            aliquam ut ac est. Vestibulum rutrum fringilla leo, sit amet tristique arcu sollicitudin et. Nulla gravida
-            urna nisi, at ultricies justo posuere id. Aenean placerat egestas mauris vel porttitor.
+            Halen AAT Bilim ve Teknoloji Üniversitesi Elektrik-Elektronik Mühendisliği Bölümünde akademisyen olarak
+            bilimsel araştırmalarını sürdürmektedir.
+        </p>
+        <p>
+            Dr. Öğr. Üyesi Adem Polat, ortaokulda vasat bir öğrenciyken Harvard Medical School’da araştırma yapan bir
+            Bilim İnsanına nasıl mı dönüştü?
+        </p>
+        <p>
+            Bu sorunun yanıtı ve üniversiteye dair tüm soruların yanıtları Dr. Polaton’la, YouTube’da!
         </p>
     </div>
 </div>
 <hr/>
 <div class="user">
     <div class="tech">
-        <img src="https://raw.githubusercontent.com/drpolaton/petek/master/assets/img/organic.svg" alt="" height="250px" width="250px">
+        <h2>YouTube konuları:</h2>
+        <p>Harvard-MIT ve Ötesi</p>
+        <p>İTÜ</p>
+        <p>Mühendislik Öğrenimi</p>
+        <p>Elektrik-Elektronik Mühendisliği Öğrenimi</p>
+        <p>Üniversite Matematiğinin Anlam ve Önemi</p>
+        <p>Yurtdışı Öğrenim</p>
+        <p>Yüksek Lisans Öğrenimi</p>
+        <p>Doktora Öğrenimi</p>
+        <p>Bilimin Büyülü Dünyası</p>
+        <p>Bilim ve Tiyatro</p>
+        <p>Kampüs Yaşamı</p>
+        <p>YKS (TYT-AYT) ve LGS Sınavlarına Hazırlık</p>
+        <p>Sınavlarda Türkiye Derecesi Nasıl Yapılır?</p>
+        <p>Üniversite ve Bölüm Seçiminde Doğru Tercih Nasıl Yapılır?</p>
+    </div>
+</div>
+<hr/>
+<div class="user">
+    <div class="tech">
+        <img src="https://raw.githubusercontent.com/drpolaton/petek/master/assets/img/organic.svg"
+             alt="Bal Peteği" height="250px" width="250px">
         <h2>Arı Kovanı Nedir?</h2>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non risus eget odio fermentum pulvinar in non
