--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,6 +23,9 @@
             <a aria-label="Discord" target="_blank" href="https://drpolaton.com/b/Discord">
                 <i class="icon fa fa-discord" aria-hidden="true"></i>
             </a>
+            <a aria-label="Bal Peteği" target="_blank" href="https://drpolaton.com/petek">
+                <i class="icon fa icon-honeycomb" aria-hidden="true"></i>
+            </a>
         </div>
         <div class="header-links">
             <!-- <a class="link" href="#" data-scroll>Header Links</a> -->
