--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,17 +9,32 @@
         <p>
             İTÜ Elektronik ve Haberleşme Mühendisliğinden mezun oldu. Yüksek Lisans ve Doktora eğitimlerini yine İTÜ’de
             tamamladı. Doktora eğitimi sırasında <b>Harvard-MIT Health Science and Technology</b> ve <b>Harvard Medical
-            School</b>’dameme kanserinde 3-boyutlu görüntüleme ve biyogörüntüleme konularında bilimsel çalışmalar yaptı.
+            School</b>’da meme kanserinde 3-boyutlu görüntüleme ve biyogörüntüleme konularında bilimsel çalışmalar yaptı.
             <b>Harvard Medical School</b>’da <b>Mini-Opto Tomografi Cihazı</b> geliştirdi.
         </p>
+        <iframe src="https://www.youtube.com/embed/jsfl6exv3lw" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         <p>
             Halen AAT Bilim ve Teknoloji Üniversitesi Elektrik-Elektronik Mühendisliği Bölümünde akademisyen olarak
             bilimsel araştırmalarını sürdürmektedir.
         </p>
+        <iframe src="https://www.youtube.com/embed/KFteFW_YScc" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/V1hJ_QX4OYA" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         <p>
             Dr. Öğr. Üyesi Adem Polat, ortaokulda vasat bir öğrenciyken Harvard Medical School’da araştırma yapan bir
             Bilim İnsanına nasıl mı dönüştü?
         </p>
+        <iframe src="https://www.youtube.com/embed/p4cQ6IoL8s4" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/FDrKDYlLTnM" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         <p>
             Bu sorunun yanıtı ve üniversiteye dair tüm soruların yanıtları Dr. Polaton’la, YouTube’da!
         </p>
