Update Google Analytics
Converted Google Analytics 4.

--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -1,6 +1,7 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
 {% if site.google-analytics %}
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112846050-13"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VZJG7C5PPE"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
