GA4 move to head.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,5 +34,5 @@
     <meta property="twitter:image"
           content="https://raw.githubusercontent.com/drpolaton/drpolaton.github.io/master/screenshot.png">
 
-
+    {% include google-analytics.html %}
 </head>
